# CreateStainVectorProfile

./: AngleHistogram.cpp  BasisTransform.cpp  BasisTransform.h  CMakeLists.txt  CreateStainVectorProfile.cpp  CreateStainVectorProfile.h  FileDialogHandling.h  LICENSE  MacenkoHistogram.cpp  README.md  RandomWSISampler.cpp  RandomWSISampler.h  StainProfile.cpp  StainProfile.h  StainVectorMacenko.cpp  StainVectorNMF.cpp  StainVectorsFromROI.cpp  StainVectorsFromROI.h  infoTemplate.info.in
